# zoro

./: .gitignore  .pnpm-approvals.json  AGENTS.md  Cargo.toml  README.md  README.zh-CN.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: ai_issue.yml  bug_report.yml  config.yml  documentation.yml  feature_request.yml  translation_issue.yml
.github/workflows/: ci.yml  release.yml
apps/browser-extension/: manifest.json  package.json  vite.config.ts
apps/browser-extension/src/background/: connector.ts  index.ts
apps/browser-extension/src/content/: index.ts
apps/browser-extension/src/lib/: api.ts  types.ts
apps/browser-extension/src/popup/: App.tsx  i18n.ts  index.html  main.tsx
apps/desktop/: components.json  index.html  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  nsis-hooks.nsi  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/deb-scripts/: postinst  prerm
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  log_buffer.rs  main.rs  menu.rs  sidecar.rs
apps/desktop/src-tauri/src/commands/: acp.rs  annotations.rs  arxiv.rs  browser.rs  chat.rs  citation.rs  cli.rs  connector.rs  debug.rs  http_proxy.rs  import_export.rs  lab.rs  lab_acp.rs  library.rs  mcp.rs  mod.rs  notes.rs  paper_links.rs  papers_cool.rs  plugins.rs  reader_state.rs  search.rs  subscription.rs  sync.rs  terminal.rs  translation.rs  updater.rs  watch_list.rs  zotero_import.rs
apps/desktop/src-tauri/src/connector/: handlers.rs  mod.rs  server.rs
apps/desktop/src-tauri/src/connector/zotero_compat/: handlers.rs  mapping.rs  mod.rs  server.rs  session.rs  types.rs
apps/desktop/src-tauri/src/storage/: config.rs  mod.rs
apps/desktop/src-tauri/src/subscriptions/: mod.rs
apps/desktop/src/components/: BackgroundTaskPanel.tsx  BilingualText.tsx  CollapsibleAuthors.tsx  DisplayModeToggle.tsx  HighlightedText.tsx  KeyboardShortcutsSettings.tsx  LogPanel.tsx  OnboardingOverlay.tsx
apps/desktop/src/hooks/: useAutoscroll.ts  useKeybindings.ts  useLocalAnnotations.ts  useMenuEvents.ts  useMountedTabs.ts
apps/desktop/src/lib/: columnConfig.ts  commands.ts  dragState.ts  htmlAnnotation.ts  i18n.ts  keybindings.ts  logger.ts  readerTabs.ts  tiptapCitation.ts  tiptapKeybindings.ts  tiptapPaperLink.ts  utils.ts
apps/desktop/src/locales/: de.json  en.json  es.json  fr.json  ja.json  ko.json  pt.json  ru.json  zh-CN.json
apps/desktop/src/plugins/: PluginManager.ts  PluginSharedDeps.ts  PluginSlot.tsx  index.ts  pluginStore.ts  types.ts
apps/desktop/src/routes/: feed.tsx  library.tsx  noteEditor.tsx  papersCool.tsx  pluginView.tsx  reader.tsx  settings.tsx  watchList.tsx  webview.tsx
apps/desktop/src/stores/: acpProxyStore.ts  agentStore.ts  annotationStore.ts  backgroundTaskStore.ts  browserStore.ts  keybindingStore.ts  labStore.ts  libraryStore.ts  noteStore.ts  paperLinksStore.ts  (+6 more)
crates/zoro-acp/: Cargo.toml
crates/zoro-acp/src/: config.rs  error.rs  lib.rs  manager.rs
crates/zoro-ai/: Cargo.toml
crates/zoro-ai/src/: client.rs  error.rs  lib.rs  streaming.rs  translate.rs
crates/zoro-arxiv/: Cargo.toml
crates/zoro-arxiv/src/: arxiv_id.rs  clean.rs  error.rs  fetch.rs  lib.rs  style.rs  translate.rs
crates/zoro-cli/: Cargo.toml
crates/zoro-cli/src/: config.rs  main.rs  output.rs
crates/zoro-cli/src/backend/: http.rs  local.rs  mod.rs
crates/zoro-cli/src/commands/: collections.rs  export.rs  install_cli.rs  mod.rs  notes.rs  papers.rs  status.rs  tags.rs
crates/zoro-core/: Cargo.toml
crates/zoro-core/src/: bibtex.rs  error.rs  http_client.rs  lib.rs  models.rs  ris.rs  slug_utils.rs
crates/zoro-db/: Cargo.toml
crates/zoro-db/src/: error.rs  lib.rs  schema.rs
crates/zoro-db/src/queries/: annotations.rs  attachments.rs  citations.rs  collections.rs  glossary.rs  mod.rs  notes.rs  paper_links.rs  papers.rs  papers_cool_cache.rs  plugin_storage.rs  reader_state.rs  search.rs  subscriptions.rs  sync.rs  sync_conflicts.rs  tags.rs  translations.rs  watch_lists.rs
crates/zoro-lab-acpproxy/: Cargo.toml
crates/zoro-lab-acpproxy/src/: config.rs  error.rs  lib.rs  server.rs  worker.rs
crates/zoro-lab-freellm/: Cargo.toml
crates/zoro-lab-freellm/src/: lib.rs  models.rs  providers.rs  service.rs
crates/zoro-llm-proxy/: Cargo.toml
crates/zoro-llm-proxy/src/: config.rs  error.rs  health.rs  lib.rs  router.rs  server.rs
crates/zoro-mcp/: Cargo.toml
crates/zoro-mcp/src/: main.rs  resources.rs  server.rs  state.rs
crates/zoro-mcp/src/tools/: annotations.rs  citations.rs  collections.rs  import_export.rs  mod.rs  notes.rs  papers.rs  subscriptions.rs  tags.rs  translations.rs
crates/zoro-metadata/: Cargo.toml
crates/zoro-metadata/src/: crossref.rs  dblp.rs  doi_content_negotiation.rs  error.rs  lib.rs  openalex.rs  pdf_extract.rs  pdf_resolve.rs  semantic_scholar.rs  unpaywall.rs
crates/zoro-plugins/: Cargo.toml
crates/zoro-plugins/src/: error.rs  lib.rs  manifest.rs  registry.rs
crates/zoro-storage/: Cargo.toml
crates/zoro-storage/src/: attachments.rs  lib.rs  paper_dir.rs  sync.rs
crates/zoro-subscriptions/: Cargo.toml
crates/zoro-subscriptions/src/: dblp.rs  error.rs  huggingface.rs  lib.rs  openalex.rs  opencitations.rs  papers_cool.rs  semantic_scholar.rs  source.rs
crates/zoro-webdav/: Cargo.toml
crates/zoro-webdav/src/: client.rs  error.rs  file_sync.rs  lib.rs  rate_limiter.rs  sync_engine.rs  types.rs
docs/: acknowledgement.md  agent-integration.md  architecture.md  browser-extension.md  cli.md  contributing.md  data-model.md  deployment.md  development.md  lab-free-llm.md  mcp-server.md  subscription-plugins.md
docs/cn/: agent-integration.md  architecture.md  browser-extension.md  cli.md  contributing.md  data-model.md  deployment.md  development.md  lab-free-llm.md  mcp-server.md  subscription-plugins.md
scripts/: build-cli-sidecar.sh  build-mcp-sidecar.sh  pre-commit  setup-hooks.sh
(+43 files in other folders)
