[workspace]
members = [
  "apps/desktop/src-tauri",
  "crates/zoro-acp",
  "crates/zoro-ai",
  "crates/zoro-arxiv",
  "crates/zoro-core",
  "crates/zoro-db",
  "crates/zoro-metadata",
  "crates/zoro-mcp",
  "crates/zoro-plugins",
  "crates/zoro-storage",
  "crates/zoro-subscriptions",
  "crates/zoro-webdav",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
async-trait = "0.1"
sha2 = "0.10"
slug = "0.1"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
toml = "0.8"
tokio-util = { version = "0.7", features = ["compat"] }
tauri = { version = "2", features = ["unstable"] }
tauri-build = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-decorum = "1"
lopdf = "0.34"
regex = "1"
scraper = "0.22"
base64 = "0.22"
url = "2"
futures = "0.3"
portable-pty = "0.9"
agent-client-protocol = "0.10"
