[package]
name = "zoro-cli"
version = "0.1.0"
edition = "2021"
description = "Zoro CLI — literature management from the command line"

[[bin]]
name = "zoro"
path = "src/main.rs"

[dependencies]
zoro-core = { path = "../zoro-core" }
zoro-db = { path = "../zoro-db" }
zoro-storage = { path = "../zoro-storage" }
zoro-metadata = { path = "../zoro-metadata" }
clap = { version = "4", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
comfy-table = "7"
colored = "3"
dirs = "6"
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
slug = { workspace = true }
