[package]
name = "zoro-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Core domain models and utilities for Zoro"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
slug = { workspace = true }
