[package]
name = "zoro-lab-freellm"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Free LLM service management: provider definitions, API key management, model list fetching/caching"

[dependencies]
zoro-llm-proxy = { path = "../zoro-llm-proxy" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
