[package]
name = "zoro-llm-proxy"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Local OpenAI-compatible LLM proxy with multi-provider routing, retry and health tracking"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
axum = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
