[package]
name = "zoro-mcp"
version = "0.1.0"
edition = "2021"
description = "Zoro MCP server for AI agent integration"

[[bin]]
name = "zoro-mcp"
path = "src/main.rs"

[dependencies]
zoro-core = { path = "../zoro-core" }
zoro-db = { path = "../zoro-db" }
zoro-ai = { path = "../zoro-ai" }
zoro-metadata = { path = "../zoro-metadata" }
zoro-storage = { path = "../zoro-storage" }
zoro-subscriptions = { path = "../zoro-subscriptions" }
rmcp = { version = "1.1", features = [
    "server",
    "macros",
    "transport-io",
    "transport-streamable-http-server",
] }
schemars = { version = "1", features = ["chrono04"] }
clap = { version = "4", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
tokio-util = "0.7"
toml = { workspace = true }
