[package]
name = "zoro-plugins"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Plugin system for Zoro"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
toml = { workspace = true }
zip = "2"
