[package]
name = "zoro-webdav"
version = "0.1.0"
edition = "2021"
description = "WebDAV sync client for Zoro"

[dependencies]
zoro-core = { path = "../zoro-core" }
zoro-db = { path = "../zoro-db" }
zoro-storage = { path = "../zoro-storage" }
reqwest = { workspace = true, features = ["stream"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
quick-xml = { version = "0.36", features = ["serialize"] }
base64 = "0.22"
url = "2"
futures-util = "0.3"
md-5 = "0.10"
